[gd_scene load_steps=38 format=3 uid="uid://05ukpwn07wnq"]

[ext_resource type="Script" path="res://Scripts/other/StateEnemy.gd" id="1_buy47"]
[ext_resource type="Animation" uid="uid://o4rsdts5xnsq" path="res://Visual/Animations/Punch.res" id="2_p2nk6"]
[ext_resource type="PackedScene" uid="uid://dkreawyu7cx8i" path="res://Scenes/Other/ParticleGenerator.tscn" id="2_p3s5g"]
[ext_resource type="Script" path="res://Scenes/Enemies/HurtBox.gd" id="2_pu8xq"]
[ext_resource type="Shader" path="res://Visual/Shaders/hitEffect.gdshader" id="2_rit0p"]
[ext_resource type="Texture2D" uid="uid://bs8aginxbhwpj" path="res://Visual/Sprites/SquirrelFighter-Sheet.png" id="3_22wam"]
[ext_resource type="AudioStream" uid="uid://bgcgi3yy7k685" path="res://Sound/Sfx/Squirrel/Squirrel_cry_wet01_v1.wav" id="3_oqkpn"]
[ext_resource type="AudioStream" uid="uid://d2sh0lmu1kf8q" path="res://Sound/Sfx/Squirrel/Squirrel_cry_wet02_v1.wav" id="4_fen6k"]
[ext_resource type="Script" path="res://Scripts/other/HitBox.gd" id="5_jjw23"]
[ext_resource type="Script" path="res://Scripts/Enemy_States/EnemyIdle.gd" id="5_rva3f"]
[ext_resource type="AudioStream" uid="uid://bal734bcpwvep" path="res://Sound/Sfx/Squirrel/Squirrel_cry_wet03_v1.wav" id="5_wp3hs"]
[ext_resource type="Script" path="res://Scripts/State/state_machine.gd" id="6_56f0l"]
[ext_resource type="Script" path="res://Scripts/Enemy_States/EnemyChase.gd" id="6_oogn5"]
[ext_resource type="Script" path="res://Scripts/Enemy_States/EnemyPunch.gd" id="7_av5gr"]
[ext_resource type="Script" path="res://Scripts/Enemy_States/EnemyJump.gd" id="8_aldih"]
[ext_resource type="Script" path="res://Scripts/Enemy_States/EnemyHurt.gd" id="10_qq6i4"]
[ext_resource type="Script" path="res://Scripts/Enemy_States/EnemyRandom.gd" id="12_yiyxc"]
[ext_resource type="Script" path="res://Scenes/Enemies/EnemyFall.gd" id="13_j7e5y"]
[ext_resource type="Script" path="res://Scenes/Enemies/EnemyDefeated.gd" id="19_n2rnl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufdj5"]
size = Vector2(8.33333, 12.3332)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6umqw"]
streams_count = 3
stream_0/stream = ExtResource("3_oqkpn")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_fen6k")
stream_1/weight = 1.0
stream_2/stream = ExtResource("5_wp3hs")
stream_2/weight = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_je0ey"]
resource_local_to_scene = true
shader = ExtResource("2_rit0p")
shader_parameter/flash_opacity = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_0v2qs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipped/Sprite2D:material:shader_parameter/flash_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ie111"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipped/Sprite2D:material:shader_parameter/flash_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fcnkw"]
_data = {
"RESET": SubResource("Animation_0v2qs"),
"hit": SubResource("Animation_ie111")
}

[sub_resource type="Animation" id="Animation_k8qwc"]
resource_name = "Fall"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipped/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}

[sub_resource type="Animation" id="Animation_33kg0"]
resource_name = "Idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipped/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_cy3iv"]
resource_name = "Jump"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipped/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_hj0kt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipped/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flipped/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3.17891e-07, 2.167)]
}

[sub_resource type="Animation" id="Animation_2q1ib"]
resource_name = "Stun"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipped/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_p4wan"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipped/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwa3k"]
_data = {
"Fall": SubResource("Animation_k8qwc"),
"Idle": SubResource("Animation_33kg0"),
"Jump": SubResource("Animation_cy3iv"),
"Punch": ExtResource("2_p2nk6"),
"RESET": SubResource("Animation_hj0kt"),
"Stun": SubResource("Animation_2q1ib"),
"Walk": SubResource("Animation_p4wan")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_unv2e"]
radius = 17.4076

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lu0pc"]
radius = 11.6667
height = 46.6667

[sub_resource type="CircleShape2D" id="CircleShape2D_xr2jt"]
radius = 14.3333

[sub_resource type="CircleShape2D" id="CircleShape2D_57ohj"]
radius = 5.70575

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_568bd"]
radius = 3.83333
height = 12.9998

[node name="Squirrel" type="CharacterBody2D" node_paths=PackedStringArray("hurtbox", "bodyhitbox")]
position = Vector2(0.5, 0)
scale = Vector2(3, 3)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_buy47")
hurtbox = NodePath("EnemyHurtBox")
bodyhitbox = NodePath("Flipped/HitBoxes/EnemyBodyHitBox/EnemyBodyCollider")
particle_gen = ExtResource("2_p3s5g")
metadata/_edit_group_ = true

[node name="EnemyHurtBox" type="Area2D" parent="." node_paths=PackedStringArray("sound")]
visible = false
collision_layer = 8
collision_mask = 0
script = ExtResource("2_pu8xq")
sound = NodePath("Squirrel_cry")

[node name="HurtBox" type="CollisionShape2D" parent="EnemyHurtBox"]
position = Vector2(-3.17891e-07, 2.167)
shape = SubResource("RectangleShape2D_ufdj5")

[node name="Squirrel_cry" type="AudioStreamPlayer2D" parent="EnemyHurtBox"]
stream = SubResource("AudioStreamRandomizer_6umqw")

[node name="Flipped" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Flipped"]
material = SubResource("ShaderMaterial_je0ey")
position = Vector2(-1, 0)
texture = ExtResource("3_22wam")
hframes = 4
vframes = 6
frame = 5

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="Flipped"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_fcnkw")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flipped"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_vwa3k")
}

[node name="HitBoxes" type="Node2D" parent="Flipped"]
visible = false

[node name="PunchHitBox" type="Area2D" parent="Flipped/HitBoxes"]
visible = false
collision_layer = 0
collision_mask = 16
script = ExtResource("5_jjw23")
damage = 15
knockback = 300

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipped/HitBoxes/PunchHitBox"]
position = Vector2(12.0848, 3)
scale = Vector2(0.4, 0.4)
shape = SubResource("CircleShape2D_unv2e")
disabled = true

[node name="EnemyBodyHitBox" type="Area2D" parent="Flipped/HitBoxes"]
collision_layer = 0
collision_mask = 16
script = ExtResource("5_jjw23")
damage = 15
knockback = 300
disableAfterHit = false

[node name="EnemyBodyCollider" type="CollisionShape2D" parent="Flipped/HitBoxes/EnemyBodyHitBox"]
position = Vector2(0, 2)
scale = Vector2(0.4, 0.4)
shape = SubResource("CapsuleShape2D_lu0pc")

[node name="PlayerDetect" type="Area2D" parent="Flipped"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipped/PlayerDetect"]
shape = SubResource("CircleShape2D_xr2jt")

[node name="WallDetect" type="Area2D" parent="Flipped"]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipped/WallDetect"]
position = Vector2(3.66667, 0.333333)
shape = SubResource("CircleShape2D_57ohj")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_56f0l")

[node name="EnemyIdle" type="Node" parent="StateMachine"]
script = ExtResource("5_rva3f")
nextState = "EnemyRandom"

[node name="EnemyJump" type="Node" parent="StateMachine"]
script = ExtResource("8_aldih")

[node name="EnemyChase" type="Node" parent="StateMachine"]
script = ExtResource("6_oogn5")

[node name="EnemyPunch" type="Node" parent="StateMachine"]
script = ExtResource("7_av5gr")

[node name="EnemyHurt" type="Node" parent="StateMachine"]
script = ExtResource("10_qq6i4")

[node name="EnemyRandom" type="Node" parent="StateMachine"]
script = ExtResource("12_yiyxc")
possible_states = Array[String](["EnemyJump", "EnemyChase"])

[node name="EnemyFall" type="Node" parent="StateMachine"]
script = ExtResource("13_j7e5y")

[node name="EnemyDefeated" type="Node" parent="StateMachine"]
script = ExtResource("19_n2rnl")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Label" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(10, 10)
offset_left = -8.0
offset_top = -30.0
offset_right = 8.0
offset_bottom = -7.0
size_flags_stretch_ratio = 0.5
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(-3.17891e-07, 2.167)
shape = SubResource("CapsuleShape2D_568bd")

[connection signal="area_entered" from="Flipped/HitBoxes/PunchHitBox" to="Flipped/HitBoxes/PunchHitBox" method="_on_area_entered"]
[connection signal="area_entered" from="Flipped/HitBoxes/EnemyBodyHitBox" to="Flipped/HitBoxes/EnemyBodyHitBox" method="_on_area_entered"]
[connection signal="body_entered" from="Flipped/PlayerDetect" to="StateMachine/EnemyChase" method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="Flipped/PlayerDetect" to="StateMachine/EnemyChase" method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="Flipped/WallDetect" to="." method="hit_wall"]
[connection signal="body_exited" from="Flipped/WallDetect" to="." method="exit_wall"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
